--- a/databridge.examples/kafka-multiple-zookeeper-multiple-server/docker-compose.yaml
+++ b/databridge.examples/kafka-multiple-zookeeper-multiple-server/docker-compose.yaml
@@ -1,99 +1,92 @@
-version: '2.1'
+version: '3.8'
 
 services:
-  zoo1:
-    image: zookeeper:3.4.9
-    hostname: zoo1
+  zookeeper1:
+    container_name: test-zookeeper1
+    hostname: zookeeper1
+    image: confluentinc/cp-zookeeper:7.4.0
     ports:
       - "2181:2181"
     environment:
-      ZOO_MY_ID: 1
-      ZOO_PORT: 2181
-      ZOO_SERVERS: server.1=zoo1:2888:3888 server.2=zoo2:2888:3888 server.3=zoo3:2888:3888
-    volumes:
-      - ./zk-multiple-kafka-multiple/zoo1/data:/data
-      - ./zk-multiple-kafka-multiple/zoo1/datalog:/datalog
-
-  zoo2:
-    image: zookeeper:3.4.9
-    hostname: zoo2
+      ZOOKEEPER_CLIENT_PORT: 2181
+      ZOOKEEPER_TICK_TIME: 2000
+  
+  zookeeper2:
+    container_name: test-zookeeper2
+    hostname: zookeeper2
+    image: confluentinc/cp-zookeeper:7.4.0
     ports:
       - "2182:2182"
     environment:
-      ZOO_MY_ID: 2
-      ZOO_PORT: 2182
-      ZOO_SERVERS: server.1=zoo1:2888:3888 server.2=zoo2:2888:3888 server.3=zoo3:2888:3888
-    volumes:
-      - ./zk-multiple-kafka-multiple/zoo2/data:/data
-      - ./zk-multiple-kafka-multiple/zoo2/datalog:/datalog
-
-  zoo3:
-    image: zookeeper:3.4.9
-    hostname: zoo3
+      ZOOKEEPER_CLIENT_PORT: 2182
+      ZOOKEEPER_TICK_TIME: 2000
+  
+  zookeeper3:
+    container_name: test-zookeeper3
+    hostname: zookeeper3
+    image: confluentinc/cp-zookeeper:7.4.0
     ports:
       - "2183:2183"
     environment:
-      ZOO_MY_ID: 3
-      ZOO_PORT: 2183
-      ZOO_SERVERS: server.1=zoo1:2888:3888 server.2=zoo2:2888:3888 server.3=zoo3:2888:3888
-    volumes:
-      - ./zk-multiple-kafka-multiple/zoo3/data:/data
-      - ./zk-multiple-kafka-multiple/zoo3/datalog:/datalog
-
-
+      ZOOKEEPER_CLIENT_PORT: 2183
+      ZOOKEEPER_TICK_TIME: 2000
+      
   kafka1:
-    image: confluentinc/cp-kafka:5.5.1
+    container_name: test-kafka1
     hostname: kafka1
+    image: confluentinc/cp-kafka:7.4.0
+    depends_on:
+      - zookeeper1
+      - zookeeper2
+      - zookeeper3
     ports:
+      - "29092:29092"
       - "9092:9092"
     environment:
-      KAFKA_ADVERTISED_LISTENERS: LISTENER_DOCKER_INTERNAL://kafka1:19092,LISTENER_DOCKER_EXTERNAL://${DOCKER_HOST_IP:-127.0.0.1}:9092
-      KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: LISTENER_DOCKER_INTERNAL:PLAINTEXT,LISTENER_DOCKER_EXTERNAL:PLAINTEXT
-      KAFKA_INTER_BROKER_LISTENER_NAME: LISTENER_DOCKER_INTERNAL
-      KAFKA_ZOOKEEPER_CONNECT: "zoo1:2181,zoo2:2182,zoo3:2183"
       KAFKA_BROKER_ID: 1
-      KAFKA_LOG4J_LOGGERS: "kafka.controller=INFO,kafka.producer.async.DefaultEventHandler=INFO,state.change.logger=INFO"
-    volumes:
-      - ./zk-multiple-kafka-multiple/kafka1/data:/var/lib/kafka/data
-    depends_on:
-      - zoo1
-      - zoo2
-      - zoo3
-
+      KAFKA_ZOOKEEPER_CONNECT: zookeeper1:2181,zookeeper2:2182,zookeeper3:2183
+      KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: PLAINTEXT:PLAINTEXT,PLAINTEXT_HOST:PLAINTEXT
+      KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://kafka1:29092,PLAINTEXT_HOST://localhost:9092
+      KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
+      KAFKA_GROUP_INITIAL_REBALANCE_DELAY_MS: 0
+      KAFKA_DELETE_TOPIC_ENABLE: 'true'
+  
   kafka2:
-    image: confluentinc/cp-kafka:5.5.1
+    container_name: test-kafka2
     hostname: kafka2
+    image: confluentinc/cp-kafka:7.4.0
+    depends_on:
+      - zookeeper1
+      - zookeeper2
+      - zookeeper3
     ports:
+      - "29093:29093"
       - "9093:9093"
     environment:
-      KAFKA_ADVERTISED_LISTENERS: LISTENER_DOCKER_INTERNAL://kafka2:19093,LISTENER_DOCKER_EXTERNAL://${DOCKER_HOST_IP:-127.0.0.1}:9093
-      KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: LISTENER_DOCKER_INTERNAL:PLAINTEXT,LISTENER_DOCKER_EXTERNAL:PLAINTEXT
-      KAFKA_INTER_BROKER_LISTENER_NAME: LISTENER_DOCKER_INTERNAL
-      KAFKA_ZOOKEEPER_CONNECT: "zoo1:2181,zoo2:2182,zoo3:2183"
       KAFKA_BROKER_ID: 2
-      KAFKA_LOG4J_LOGGERS: "kafka.controller=INFO,kafka.producer.async.DefaultEventHandler=INFO,state.change.logger=INFO"
-    volumes:
-      - ./zk-multiple-kafka-multiple/kafka2/data:/var/lib/kafka/data
-    depends_on:
-      - zoo1
-      - zoo2
-      - zoo3
+      KAFKA_ZOOKEEPER_CONNECT: zookeeper1:2181,zookeeper2:2182,zookeeper3:2183
+      KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: PLAINTEXT:PLAINTEXT,PLAINTEXT_HOST:PLAINTEXT
+      KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://kafka2:29093,PLAINTEXT_HOST://localhost:9093
+      KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
+      KAFKA_GROUP_INITIAL_REBALANCE_DELAY_MS: 0
+      KAFKA_DELETE_TOPIC_ENABLE: 'true'
 
   kafka3:
-    image: confluentinc/cp-kafka:5.5.1
+    container_name: test-kafka3
     hostname: kafka3
+    image: confluentinc/cp-kafka:7.4.0
+    depends_on:
+      - zookeeper1
+      - zookeeper2
+      - zookeeper3
     ports:
+      - "29094:29094"
       - "9094:9094"
     environment:
-      KAFKA_ADVERTISED_LISTENERS: LISTENER_DOCKER_INTERNAL://kafka3:19094,LISTENER_DOCKER_EXTERNAL://${DOCKER_HOST_IP:-127.0.0.1}:9094
-      KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: LISTENER_DOCKER_INTERNAL:PLAINTEXT,LISTENER_DOCKER_EXTERNAL:PLAINTEXT
-      KAFKA_INTER_BROKER_LISTENER_NAME: LISTENER_DOCKER_INTERNAL
-      KAFKA_ZOOKEEPER_CONNECT: "zoo1:2181,zoo2:2182,zoo3:2183"
       KAFKA_BROKER_ID: 3
-      KAFKA_LOG4J_LOGGERS: "kafka.controller=INFO,kafka.producer.async.DefaultEventHandler=INFO,state.change.logger=INFO"
-    volumes:
-      - ./zk-multiple-kafka-multiple/kafka3/data:/var/lib/kafka/data
-    depends_on:
-      - zoo1
-      - zoo2
-      - zoo3
+      KAFKA_ZOOKEEPER_CONNECT: zookeeper1:2181,zookeeper2:2182,zookeeper3:2183
+      KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: PLAINTEXT:PLAINTEXT,PLAINTEXT_HOST:PLAINTEXT
+      KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://kafka3:29094,PLAINTEXT_HOST://localhost:9094
+      KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
+      KAFKA_GROUP_INITIAL_REBALANCE_DELAY_MS: 0
+      KAFKA_DELETE_TOPIC_ENABLE: 'true'
