Increases the waiting time for Property value update
Signed-off-by: Mohammad Ghazanfar Ali Danish <ghazanfar.danish@iese.fraunhofer.de>

--- a/databridge.examples/databridge.examples.kafka-jsonata-aas/pom.xml
+++ b/databridge.examples/databridge.examples.kafka-jsonata-aas/pom.xml
@@ -122,11 +122,19 @@
 
 		<!-- Zookeeper server -->
 		<dependency>
-            <groupId>org.apache.curator</groupId>
-            <artifactId>curator-test</artifactId>
-            <version>5.5.0</version>
-            <scope>test</scope>
-        </dependency>
+			<groupId>org.apache.curator</groupId>
+			<artifactId>curator-test</artifactId>
+			<version>5.5.0</version>
+			<scope>test</scope>
+		</dependency>
+
+		<!-- https://mvnrepository.com/artifact/org.awaitility/awaitility -->
+		<dependency>
+			<groupId>org.awaitility</groupId>
+			<artifactId>awaitility</artifactId>
+			<version>4.2.0</version>
+			<scope>test</scope>
+		</dependency>
 
 	</dependencies>
 </project>
