--- a/databridge.examples/databridge.examples.aas-jsonata-mqtt/pom.xml
+++ b/databridge.examples/databridge.examples.aas-jsonata-mqtt/pom.xml
@@ -115,11 +115,7 @@
 			<version>1.4.0</version>
 		</dependency>
 
-		<dependency>
-			<groupId>org.eclipse.basyx</groupId>
-			<artifactId>basyx.components.AASServer</artifactId>
-			<version>1.2.0</version>
-		</dependency>
+		
 
 		<!-- JUnit 4 for running JUnit tests -->
 		<dependency>
@@ -140,6 +136,26 @@
 			<groupId>org.eclipse.digitaltwin.basyx</groupId>
 			<artifactId>databridge.camel-jsonata</artifactId>
 			<version>0.0.1-SNAPSHOT</version>
+		</dependency>
+
+		<!-- Moquette MQTT broker for testing MQTT events -->
+		<dependency>
+			<groupId>io.moquette</groupId>
+			<artifactId>moquette-broker</artifactId>
+			<version>0.16</version>
+			<scope>test</scope>
+			<exclusions>
+				<exclusion>
+					<groupId>org.slf4j</groupId>
+					<artifactId>slf4j-log4j12</artifactId>
+				</exclusion>
+			</exclusions>
+		</dependency>
+
+		<dependency>
+			<groupId>org.eclipse.basyx</groupId>
+			<artifactId>basyx.components.AASServer</artifactId>
+			<version>1.2.0</version>
 		</dependency>
 
 	</dependencies>
