--- a/databridge.examples/databridge.examples.aas-jsonata-mqtt/pom.xml
+++ b/databridge.examples/databridge.examples.aas-jsonata-mqtt/pom.xml
@@ -158,5 +158,12 @@
 			<version>1.2.0</version>
 		</dependency>
 
+		<dependency>
+		    <groupId>org.json</groupId>
+		    <artifactId>json</artifactId>
+		    <version>20140107</version>
+		</dependency>
+
+		
 	</dependencies>
 </project>
