Restored OPCUA examples aas.properties from previous commit
Signed-off-by: rana <masud.rana@iese.fraunhofer.de>

--- a/databridge.examples/databridge.examples.opcua-jackson-jsonata-aas/src/main/resources/aas.properties
+++ b/databridge.examples/databridge.examples.opcua-jackson-jsonata-aas/src/main/resources/aas.properties
@@ -19,7 +19,7 @@ aas.backend=InMemory
 # #############################
 # Possible to load an AAS Environment from a file
 
-aas.source=aasx/updater.aasx
+aas.source=
 
 # Other examples (Currently supported: *.xml, *.json and  *.aasx): 
 # aas.source=aasx/myAAS.aasx
