--- a/databridge.examples/databridge.examples.aas-jsonata-mqtt/pom.xml
+++ b/databridge.examples/databridge.examples.aas-jsonata-mqtt/pom.xml
@@ -157,5 +157,14 @@
 		    <artifactId>json</artifactId>
 		    <version>20140107</version>
 		</dependency>
+
+		<!-- https://mvnrepository.com/artifact/org.awaitility/awaitility -->
+		<dependency>
+			<groupId>org.awaitility</groupId>
+			<artifactId>awaitility</artifactId>
+			<version>4.2.0</version>
+			<scope>test</scope>
+		</dependency>
+
 	</dependencies>
 </project>
