--- a/databridge.examples/databridge.examples.mqtt-jsonata-aas/pom.xml
+++ b/databridge.examples/databridge.examples.mqtt-jsonata-aas/pom.xml
@@ -117,6 +117,14 @@
 				</exclusion>
 			</exclusions>
 		</dependency>
+
+		<!-- https://mvnrepository.com/artifact/org.awaitility/awaitility -->
+		<dependency>
+			<groupId>org.awaitility</groupId>
+			<artifactId>awaitility</artifactId>
+			<version>4.2.0</version>
+			<scope>test</scope>
+		</dependency>
 		
 	</dependencies>
 </project>
