--- a/databridge.component/pom.xml
+++ b/databridge.component/pom.xml
@@ -163,6 +163,13 @@
 			<version>2.14.1</version>
 		</dependency>
 
+		<dependency>
+			<groupId>org.eclipse.digitaltwin.basyx</groupId>
+			<artifactId>databridge.examples.aas-jsonata-mqtt</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
+			<scope>test</scope>
+		</dependency>
+
 		<!-- BaSyx SDK -->
 		<dependency>
 			<groupId>org.eclipse.basyx</groupId>
@@ -341,6 +348,7 @@
 									<goal>up</goal>
 								</goals>
 							</execution>
+ 
 							<execution>
 								<id>docker-compose-down</id>
 								<phase>post-integration-test</phase>
