--- a/databridge.examples/databridge.examples.aas-jsonata-http/pom.xml
+++ b/databridge.examples/databridge.examples.aas-jsonata-http/pom.xml
@@ -68,19 +68,12 @@
 			<scope>test</scope>
 		</dependency>
 
-	    <dependency>
-            <groupId>org.mock-server</groupId>
-            <artifactId>mockserver-netty</artifactId>
-            <version>5.13.2</version>
+		<dependency>
+			<groupId>org.eclipse.digitaltwin.basyx</groupId>
+			<artifactId>databridge.examples.httpserver</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
 			<scope>test</scope>
-        </dependency>
-
-        <dependency>
-            <groupId>org.mock-server</groupId>
-            <artifactId>mockserver-client-java</artifactId>
-            <version>5.13.2</version>
-			<scope>test</scope>
-        </dependency>
+		</dependency>
 
 		<!-- BaSyx SDK -->
 		<dependency>
