Updated after initial review
Signed-off-by: rana <masud.rana@iese.fraunhofer.de>

--- a/databridge.component/src/test/resources/httpproducer/databridge/context.properties
+++ b/databridge.component/src/test/resources/httpproducer/databridge/context.properties
@@ -7,7 +7,7 @@
 # ###############################
 # Specifies the subpath in the url for this server context
  
-contextPath=/aasServer
+contextPath=
 
 # ###############################
 # Hostname
