--- a/databridge.examples/pom.xml
+++ b/databridge.examples/pom.xml
@@ -17,6 +17,7 @@
 	<modules>
 		<module>databridge.examples.aas-jsonata-mqtt</module>
 		<module>databridge.examples.aas-jsonata-http</module>
+		<module>databridge.examples.aas-jsonata-opcua</module>
 		<module>databridge.examples.aasserver</module>
 		<module>databridge.examples.kafkaproducer</module>
 		<module>databridge.examples.activemqproducer</module>
@@ -30,9 +31,10 @@
 		<module>databridge.examples.opcua-jackson-jsonata-aas</module>
 		<module>databridge.examples.httppolling-jsonata-aas</module>
 		<module>databridge.examples.httppolling-jsonata-delegator</module>
+		<module>databridge.examples.httppolling-auth-jsonata-aas</module>
 		<module>databridge.examples.plc4x-jsonata-aas</module>
 		<module>databridge.examples.dot-aas-v3-api</module>
 		<module>databridge.examples.mqtt-aas_range_and_mlp</module>
-  </modules>
+	</modules>
 	<packaging>pom</packaging>
 </project>
