Added new example for dotAas v3 mqtt
[Yesterday 14:37] Fried, Jannik Oliver
Co-authored-by: FriedJannik <Jannik.Fried@iese.fraunhofer.de>

--- a/.gitignore
+++ b/.gitignore
@@ -16,6 +16,10 @@ local.properties
 .recommenders
 **/.flattened-pom.xml
 
+### IntelliJ IDEA ###
+.idea
+*.iml
+
 */src/generated/*
 
 # External tool builders
