Updated the AASPollingConsumer to support api v3
Co-authored-by: FriedJannik <Jannik.Fried@iese.fraunhofer.de>

--- a/databridge.examples/databridge.examples.aas-jsonata-http/pom.xml
+++ b/databridge.examples/databridge.examples.aas-jsonata-http/pom.xml
@@ -29,7 +29,15 @@
 				<artifactId>maven-source-plugin</artifactId>
 				<version>3.2.1</version>
 			</plugin>
-		</plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <source>9</source>
+                    <target>9</target>
+                </configuration>
+            </plugin>
+        </plugins>
 	</build>
 
 	<dependencies>
