--- a/databridge.examples/pom.xml
+++ b/databridge.examples/pom.xml
@@ -34,8 +34,8 @@
 		<module>databridge.examples.plc4x-jsonata-aas</module>
 		<module>databridge.examples.dot-aas-v3-api</module>
 		<module>databridge.examples.mqtt-aas_range_and_mlp</module>
-		<module>databridge.examples.dot-aas-3-multicast</module>
-		<module>databridge.examples.dot-aas-3-multiroute</module>
+		<module>databridge.examples.dot-aas-v3-multicast</module>
+		<module>databridge.examples.dot-aas-v3-multiroute</module>
 	</modules>
 	<packaging>pom</packaging>
 </project>
