Resolves Review Comments
Signed-off-by: Jannis Jung <jannis.jung@iese.fraunhofer.de>

--- a/databridge.examples/databridge.examples.kafka-jsonata-aas/pom.xml
+++ b/databridge.examples/databridge.examples.kafka-jsonata-aas/pom.xml
@@ -10,8 +10,7 @@
 
 	<artifactId>databridge.examples.kafka-jsonata-aas</artifactId>
 	<name>Kafka jsonATA AAS</name>
-	<description>An Integration example using kafka as a data source, jsonATA as
-		data transformer and AAS as sink</description>
+	<description>An Integration example using kafka as a data source, jsonATA as data transformer and AAS as sink</description>
 
 
 	<packaging>jar</packaging>
