--- a/databridge.examples/pom.xml
+++ b/databridge.examples/pom.xml
@@ -31,6 +31,7 @@
 		<module>databridge.examples.opcua-jackson-jsonata-aas</module>
 		<module>databridge.examples.httppolling-jsonata-aas</module>
 		<module>databridge.examples.httppolling-jsonata-delegator</module>
+		<module>databridge.examples.httppolling-auth-jsonata-aas</module>
 		<module>databridge.examples.plc4x-jsonata-aas</module>
 		<module>databridge.examples.dot-aas-v3-api</module>
 		<module>databridge.examples.mqtt-aas_range_and_mlp</module>
