wip: Add files from jannisjung/feature/sql

--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,7 @@
 		<module>databridge.camel-paho</module>
 		<module>databridge.camel-plc4x</module>
 		<module>databridge.camel-timer</module>
+		<module>databridge.camel-sql</module>
 		<module>databridge.examples</module>
 		<module>databridge.component</module>
 	</modules>
