chore: Add name and desc to camel-sql pom

--- a/databridge.camel-sql/pom.xml
+++ b/databridge.camel-sql/pom.xml
@@ -7,6 +7,9 @@
 		<artifactId>databridge.parent</artifactId>
 		<version>${revision}</version>
 	</parent>
+
+	<name>Camel SQL</name>
+	<description>SQL Data source integration using Camel</description>
 	<artifactId>databridge.camel-sql</artifactId>
 
 	<packaging>jar</packaging>
