--- a/databridge.examples/databridge.examples.sql-jsonata-aas/pom.xml
+++ b/databridge.examples/databridge.examples.sql-jsonata-aas/pom.xml
@@ -75,6 +75,11 @@
 		</dependency>
 		<dependency>
 			<groupId>org.eclipse.digitaltwin.basyx</groupId>
+			<artifactId>databridge.camel-jsonjackson</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
+		</dependency>
+		<dependency>
+			<groupId>org.eclipse.digitaltwin.basyx</groupId>
 			<artifactId>databridge.camel-jsonata</artifactId>
 			<version>0.0.1-SNAPSHOT</version>
 		</dependency>
