Implement DataBridge Camel SQL module and Example (#310)
* wip: Add files from jannisjung/feature/sql

* wip: Comment build failing line

* chore: Add name and desc to camel-sql pom

* wip: Update test resources to be independent of datasink mapping

* wip: Add JSON marshalling via Jackson to SQL example

* Add support for CamelContextAware RouteEntities to core

* Extract SqlDataSource registration logic to own class

* Minor fixes throughout SQL rel. code

* Add MySQL SqlDataSource

--- a/databridge.examples/pom.xml
+++ b/databridge.examples/pom.xml
@@ -36,6 +36,7 @@
 		<module>databridge.examples.plc4x-jsonata-aas</module>
 		<module>databridge.examples.dot-aas-v3-api</module>
 		<module>databridge.examples.mqtt-aas_range_and_mlp</module>
+		<module>databridge.examples.sql-jsonata-aas</module>
 	</modules>
 	<packaging>pom</packaging>
 </project>
