--- a/databridge.component/pom.xml
+++ b/databridge.component/pom.xml
@@ -134,6 +134,12 @@
 		
 		<dependency>
 			<groupId>org.eclipse.digitaltwin.basyx</groupId>
+			<artifactId>databridge.camel-sql</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
+		</dependency>
+		
+		<dependency>
+			<groupId>org.eclipse.digitaltwin.basyx</groupId>
 			<artifactId>databridge.camel-timer</artifactId>
 			<version>0.0.1-SNAPSHOT</version>
 		</dependency>
