--- a/databridge.component/Dockerfile
+++ b/databridge.component/Dockerfile
@@ -4,9 +4,9 @@ FROM openjdk:11-slim-bullseye
 RUN apt update && apt install -y wget && apt clean
 
 # Copy built jar to image using the jar name specified in the pom.xml (JAR_FILE)
-ARG JAR_FILE
+ARG JAR_FILE=target/*.jar
 
-COPY target/${JAR_FILE} /usr/share/databridgeExecutable.jar
+COPY ${JAR_FILE} /usr/share/databridgeExecutable.jar
 COPY target/lib /usr/share/lib
 
 # Expose this port for health check 
