--- a/databridge.examples/databridge.examples.aas-jsonata-mqtt/pom.xml
+++ b/databridge.examples/databridge.examples.aas-jsonata-mqtt/pom.xml
@@ -50,7 +50,7 @@
 		<dependency>
 			<groupId>org.eclipse.digitaltwin.basyx</groupId>
 			<artifactId>databridge.camel-aas</artifactId>
-			<version>0.0.1-SNAPSHOT</version>
+			<version>${revision}</version>
 			<scope>test</scope>
 		</dependency>
 
@@ -64,14 +64,14 @@
 		<dependency>
 			<groupId>org.eclipse.digitaltwin.basyx</groupId>
 			<artifactId>databridge.camel-timer</artifactId>
-			<version>0.0.1-SNAPSHOT</version>
+			<version>${revision}</version>
 			<scope>test</scope>
 		</dependency>
 
 		<dependency>
 			<groupId>org.eclipse.digitaltwin.basyx</groupId>
 			<artifactId>databridge.camel-paho</artifactId>
-			<version>0.0.1-SNAPSHOT</version>
+			<version>${revision}</version>
 			<scope>test</scope>
 		</dependency>
 
@@ -128,7 +128,7 @@
 		<dependency>
 			<groupId>org.eclipse.digitaltwin.basyx</groupId>
 			<artifactId>databridge.camel-jsonata</artifactId>
-			<version>0.0.1-SNAPSHOT</version>
+			<version>${revision}</version>
 		</dependency>
 
 		<!-- Moquette MQTT broker for testing MQTT events -->
