--- a/databridge.examples/databridge.examples.httppolling-auth-jsonata-aas/pom.xml
+++ b/databridge.examples/databridge.examples.httppolling-auth-jsonata-aas/pom.xml
@@ -41,7 +41,7 @@
         <dependency>
             <groupId>org.eclipse.digitaltwin.basyx</groupId>
             <artifactId>databridge.camel-aas</artifactId>
-            <version>0.0.1-SNAPSHOT</version>
+            <version>${revision}</version>
 
             <exclusions>
                 <exclusion>
@@ -58,7 +58,7 @@
         <dependency>
             <groupId>org.eclipse.digitaltwin.basyx</groupId>
             <artifactId>databridge.camel-httppolling</artifactId>
-            <version>0.0.1-SNAPSHOT</version>
+            <version>${revision}</version>
             <scope>test</scope>
 
             <exclusions>
@@ -76,7 +76,7 @@
         <dependency>
             <groupId>org.eclipse.digitaltwin.basyx</groupId>
             <artifactId>databridge.camel-jsonata</artifactId>
-            <version>0.0.1-SNAPSHOT</version>
+            <version>${revision}</version>
             <exclusions>
                 <exclusion>
                     <groupId>org.slf4j</groupId>
@@ -92,7 +92,7 @@
         <dependency>
             <groupId>org.eclipse.digitaltwin.basyx</groupId>
             <artifactId>databridge.camel-timer</artifactId>
-            <version>0.0.1-SNAPSHOT</version>
+            <version>${revision}</version>
             <scope>test</scope>
 
             <exclusions>
