--- a/databridge.examples/databridge.examples.httppolling-jsonata-aas/pom.xml
+++ b/databridge.examples/databridge.examples.httppolling-jsonata-aas/pom.xml
@@ -52,26 +52,26 @@
         <dependency>
             <groupId>org.eclipse.digitaltwin.basyx</groupId>
             <artifactId>databridge.camel-aas</artifactId>
-            <version>0.0.1-SNAPSHOT</version>
+            <version>${revision}</version>
         </dependency>
 
         <dependency>
             <groupId>org.eclipse.digitaltwin.basyx</groupId>
             <artifactId>databridge.camel-httppolling</artifactId>
-            <version>0.0.1-SNAPSHOT</version>
+            <version>${revision}</version>
             <scope>test</scope>
         </dependency>
 
        <dependency>
             <groupId>org.eclipse.digitaltwin.basyx</groupId>
             <artifactId>databridge.camel-jsonata</artifactId>
-            <version>0.0.1-SNAPSHOT</version>
+            <version>${revision}</version>
         </dependency>
 
         <dependency>
             <groupId>org.eclipse.digitaltwin.basyx</groupId>
             <artifactId>databridge.camel-timer</artifactId>
-            <version>0.0.1-SNAPSHOT</version>
+            <version>${revision}</version>
             <scope>test</scope>
         </dependency>
 
